2012-02-18: sabae-landscape.py

	* 鯖江市の百景の XML データを CSV に変換する。

2012-01-21: wikipedia-data-config.xml wikipedia-schema.xml wikipedia-solrconfig.xml

	* Wikipedia のデータを Solr にインポートする設定ファイル。

2011-12-05: simple-usage-fileapi.html

	* ブラウザの File API を使ってみる。

2011-11-24: csv2kml.py

	* CSV から KML に変換するスクリプト。

2011-11-17: buzz-slide.html

	* Google Buzz からエクスポートした HTML のスライドショー。

2011-10-21: ec2setenv.sh nodejs-setenv.sh

	* EC2 と Node.JS のアクティベーションスクリプト。

2011-10-17: fnameconv.py

	* ファイル名を日付文字列に変換する。

2011-10-10: fizzbuzz.py

	* Python で fizzbuzz

2011-10-02: solr-search.html,solr-search.js
	* Solr の簡易 HTML コンソール。

2011-09-20: javascriptmvc-update.sh
	* JavaScriptMVC の submodule を更新する。

2011-08-29: wscript-yuicompressor
	* Waf から YUI Compressor を使ってみる。

2011-08-27: simple-usage-raphael-chart.html,simple-usage-raphael-chart.js
	* Raphael を使ってチャートを表示する。

2011-08-21: wscript-pep8
	* Waf から pep8 を使ってみる。

2011-08-16: wscript-solr
	* Waf から Solr を使ってみる。

2011-08-14: simple-usage-indexeddb.html,simple-usage-indexeddb.js
	* IndexedDB を使ってみる。

2011-08-09: solr-show-fields.py
	* Solr のスキーマの XML から表を作成する。

2011-07-22: doc-wrapper.py
	* rst2html で生成した HTML の中身を他のテンプレートシステムにポーティング。

2011-07-20: solr-document-indexer.py
	* Solr にインデクス生成リクエストを投げる。

2011-06-26: mysql-schema-dumper.py,config.ini
	* MySQL のテーブル情報を HTML に書き出す。

2011-06-17: compare-linkage.cpp,compare-linkage.makefile,helloworld.cpp,helloworld.h
	* 共有ライブラリと静的リンクの違いを確認する。

2011-06-13: sandboxlib.py
	* Utility script, argument parser and timezone config.

2011-05-06: yaml2config.py,config.yaml
	* YAML の設定ファイルから指定されたセクションを抜き出す。

2011-05-01: encoding_sample.py
	* Python で標準出力をリダイレクトした場合のエンコーディングを確認する。

2011-04-29: profiler_sample.py
	* Python のプロファイラモジュールを使ってみる。

2011-03-16: conv-jleague-stadium-name.hs
	* CSV のフィールドの文字列を書き換える。

2011-03-14: convert-jleague-club-name.py
	* J リーグのクラブ名を変換する。

2011-03-13: cat.hs
	* Haskell で cat コマンド。

2011-03-12: convert-jleague-calendar.py,calendar-J1.txt,calendar-J2.txt